refactor: use slugs in URL (#424)
